2004-09-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/beam.cc (set_minimum_dy): new function. Round non-zero
	small slope up to smallest quant. This prevents small slopes from
	getting rounded to zero.

	* lily/beam-quanting.cc (quanting): don't allow dy_mus slopes that
	are smaller than the smallest quant.

	* input/tutorial/brahms*.ly: remove.

	* input/*: update all .ly files.
	 
	* ly/a4-init.ly (vsize): remove papersize init files.

	* scripts/convert-ly.py (conv): add conversion.

	* lily/parser.yy: change mode changing commands to XXXmode,
	eg. drummode.
	(mode_changing_head): group mode changes.
	(mode_changing_head_with_context): new commands: create context as
	well as change mode.

	* input/regression/system-overstrike.ly: new file.

	* scm/page-layout.scm (ly:optimal-page-breaks): add
	betweensystempadding also to fixed distance for the spring.
 
	* scm/define-grobs.scm (all-grob-descriptions): fix order of
	key-cancellation.

	* input/regression/beam-concave-damped.ly: new file.

	* lily/beam-concave.cc: new file, with new routines for concave
	decisions. There are now two types of concaveness: 1. a sharp
	logic decision forcing a beam horizontal, and 2. a number that
	measures how concave beams are that are not caught by 1.

	This fixes: morgenlied.ly and input/regression/beam-concave.ly
	
	* lily/new-fingering-engraver.cc (stop_translation_timestep): new
	property: add-stem-support

2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (get_bound_info): only do
	broken trend at the end of the line.

	* VERSION (PACKAGE_NAME): release 2.3.16.

	* input/regression/phrasing-slur.ly (Module): remove (duplicate
	with phrasing-slur-slur-avoid.ly)

	* lily/slur-scoring.cc (struct Extra_collision_info): collect
	parameters for extra offset.
	(get_bezier): add slurs mid-points for curve determination
	(score_extra_encompass): add slur end points for scoring.

2004-09-11  Matthias Neeracher  <neeracher@mac.com>
