@@ -1,4 +1,3 @@
-\version "2.3.16"
 
 @quotation
 We want to dedicate this program to all the friends that we
