@@ -1,4 +1,3 @@
-\version "2.3.16"
 @c -*-texinfo-*-
 
 @ignore
