@@ -1,4 +1,3 @@
-\version "2.3.16"
 @node Literature list
 @appendix Literature list
 
