@@ -1,4 +1,3 @@
-\version "2.3.16"
 @c Note: -*-texinfo-*-
 @c This file is part of lilypond.tely
 
