@@ -1,4 +1,3 @@
-\version "2.3.16"
 @node Point and click
 @appendix Point and click
 @cindex point and click
